<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/DI"
                android:textSize="18sp"
                tools:text="第" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/first_week"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:ms_background_color="?android:windowBackground"
                app:ms_dropdown_max_height="400dp"
                app:ms_padding_left="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/week_ZHOU"
                android:textSize="18sp"
                tools:text="周" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/to"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/DI"
                android:textSize="18sp"
                tools:text="第" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/end_week"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:ms_background_color="?android:windowBackground"
                app:ms_dropdown_max_height="400dp"
                app:ms_padding_left="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/week_ZHOU"
                android:textSize="18sp"
                tools:text="周" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/week_XINGQI"
                android:textSize="18sp"
                tools:text="星期" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/week"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:ms_background_color="?android:windowBackground"
                app:ms_padding_left="10dp" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:overScrollMode="never"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/one_to_two"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_to_two" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/three_to_four"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_to_four" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/five_to_six"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five_to_six" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/seven_to_eight"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seven_to_eight" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/nine_to_ten"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nine_to_ten" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/eleven_to_twelve"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eleven_to_twelve" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/empty_room_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorFullWidth="false" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/empty_room_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_smoke"
            android:overScrollMode="never" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/search_empty_room"
        android:hapticFeedbackEnabled="true"
        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>