<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnPrimary"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_year_term"
                android:textSize="14sp" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/year_term"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                app:ms_background_color="?android:windowBackground" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/two_round_bottom"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/previous_page"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_page"
                app:icon="@drawable/ic_previous_page"
                app:iconGravity="start" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/which_page"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" / "
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/total_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="123" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_page"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_page"
                app:icon="@drawable/ic_next_page"
                app:iconGravity="end" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sports_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_smoke"
            android:overScrollMode="never" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/to_the_top"
        android:hapticFeedbackEnabled="true"
        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>